--- a/.gitignore
+++ b/.gitignore
@@ -10,6 +10,8 @@
 /[Ll]ogs/
 /[Mm]emoryCaptures/
 
+/[Uu]serSettings/
+
 # Asset meta data should only be ignored when the corresponding asset is also ignored
 !/[Aa]ssets/**/*.meta
 
@@ -59,3 +61,4 @@ sysinfo.txt
 crashlytics-build.properties
 
 *.meta
+
