--- a/.gitignore
+++ b/.gitignore
@@ -70,3 +70,4 @@ Assets/VR Controllers Models/Oculus Controllers/oculus_rifts_controller_right/oc
 Assets/VR Controllers Models/Valve Index Controllers/valve-index-controller-left/source/valve_controller_knu_1_0_left.obj.meta
 Assets/VR Controllers Models/Valve Index Controllers/valve-index-controller-right/source/valve_controller_knu_1_0_right.obj.meta
 Assets/VR Controllers Models/Vive Controllers/Models/vr_controller_vive_1_5.obj.meta
+Assets/Textures/portraits/pretty-student-girl-with-ginger-hair-knot-relaxing-home-after-college-headshot-tender-charming-young-woman-with-freckles-wearing-white-blouse-posing.jpg.meta
